# L-Trail

./: LICENSE  README.md  pyproject.toml  requirements.txt
ltrail/: pl.py  tl.py
reproducibility/: Fig1_and_Fig2_pancreas.ipynb  Fig3_bonemarrow.ipynb
tutorials/: Fig1_Pancreas (1).ipynb  Pancreas_dataset.ipynb  ltrail_tutorial.ipynb  quickstart.ipynb
